Sidebar añadido y Viewtransitions implementadas

--- a/src/components/BackgroundColors.astro
+++ b/src/components/BackgroundColors.astro
@@ -31,6 +31,9 @@ const { type } = Astro.props;
                 border-radius: 0;
                 animation: none;
             }
+            &:has(div.hamburger_icon){
+                padding-left: 33px;
+            }
         }
 
         &.form-login {
