--- a/src/components/BrokerLogo.astro
+++ b/src/components/BrokerLogo.astro
@@ -17,17 +17,15 @@ import '@fontsource/audiowide';
         display: flex;
         align-items: center;
         user-select: none;
-        margin-left: .25rem;
         height: 100%;
     }
     h3{
-        margin:0;
-        color: var(--secondary-color-text);
         font-family: 'Audiowide', system-ui;
+        color: var(--text-color-light);
     }
     html.light{
         h3{
-            color: var(--primary-color-text);
+            color: var(--text-color-dark);
         }
     }
 </style>
