--- a/src/sections/TextLink.astro
+++ b/src/sections/TextLink.astro
@@ -14,7 +14,7 @@ const { text, textN, href } = Astro.props;
         text-decoration: none;
         margin: 1.5rem auto;
         font-size: 1rem;
-        color: var(--primary-color-text);
+        color: var(--text-color-dark);
     }
     strong {
         font-weight: 100;
@@ -31,7 +31,7 @@ const { text, textN, href } = Astro.props;
     }
     html.light {
         .text__link {
-            color: var(--secondary-color-text);
+            color: var(--text-color-light);
         }
     }
 </style>
