--- a/src/components/svg/ChartSVG.astro
+++ b/src/components/svg/ChartSVG.astro
@@ -1,13 +1,15 @@
-<a href="/broker" class="link-page">
-    <svg
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 448 512"
-        width="23"
-        height="23"
-        ><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-        <path
-            d="M160 80c0-26 22-48 48-48h32c27 0 48 22 48 48v352c0 27-21 48-48 48h-32c-26 0-48-21-48-48V80zM0 272c0-26 22-48 48-48h32c27 0 48 22 48 48v160c0 27-21 48-48 48H48c-26 0-48-21-48-48V272zM368 96h32c27 0 48 22 48 48v288c0 27-21 48-48 48h-32c-26 0-48-21-48-48V144c0-26 22-48 48-48z"
-        ></path></svg
-    >
-    <p>Broker</p>
-</a>
+<li class="link-page" id="broker">
+    <a href="/broker">
+        <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"
+            width="23"
+            height="23"
+            ><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path
+                d="M160 80c0-26 22-48 48-48h32c27 0 48 22 48 48v352c0 27-21 48-48 48h-32c-26 0-48-21-48-48V80zM0 272c0-26 22-48 48-48h32c27 0 48 22 48 48v160c0 27-21 48-48 48H48c-26 0-48-21-48-48V272zM368 96h32c27 0 48 22 48 48v288c0 27-21 48-48 48h-32c-26 0-48-21-48-48V144c0-26 22-48 48-48z"
+            ></path></svg
+        >
+        <p>Broker</p>
+    </a>
+</li>
