--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,8 @@ import TextLink from "@sections/TextLink.astro";
 </Layout>
 <style>
 	h1 {
-		margin-top: 7rem;
+		margin-top: 4.5rem;
+		margin-bottom: 2rem;
 	}
 	main{
 		display: flex;
