--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -18,6 +18,9 @@ import Layout from "@layouts/Layout.astro";
     </mai>
 </Layout>
 <style>
+    h1 {
+		margin: 2.5rem;
+	}
     main {
         position: relative;
         display: flex;
