correciones en formularios por las ViewTransitions

--- a/src/components/HamburgerMenu.astro
+++ b/src/components/HamburgerMenu.astro
@@ -64,7 +64,7 @@
         }
     }
 </style>
-<script>
+<script is:inline>
     let newWidth = window.innerWidth;
     document.getElementById("hamburger").addEventListener("click", () => {
         if (newWidth < 666) {
