--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,6 +26,6 @@ import TextLink from "@sections/TextLink.astro";
 		align-items: center;
 		flex-direction: column;
 		height: 100vh;
-		width: 100%;
+		margin: 0;
 	}
 </style>
