--- a/src/sections/MenuMobile.astro
+++ b/src/sections/MenuMobile.astro
@@ -8,14 +8,14 @@ import "@styles/link-pages-svg.css";
 ---
 
 <div id="background__menu-mobile" transition:persist></div>
-<section id="menu-mobile" transition:persist>
+<aside id="menu-mobile" transition:persist>
     <ul>
         <HouseSVG />
         <ChartSVG />
         <PiggySVG />
         <UserSVG />
     </ul>
-</section>
+</aside>
 
 <style>
     #background__menu-mobile {
