--- a/src/components/forms/FormLogin.astro
+++ b/src/components/forms/FormLogin.astro
@@ -6,18 +6,18 @@ import "src/styles/forms.css";
 ---
 
 <div class="form__group">
-	<label class="form__label" for="user">Usuario:</label>
-	<input class="form__input" type="text" id="user" name="user" required />
+	<label class="form__label" for="user-login">Usuario:</label>
+	<input class="form__input" type="text" id="user-login" name="user" required />
 </div>
 
 <div class="form__group">
-	<label class="form__label" for="Password">Contraseña:</label>
+	<label class="form__label" for="password-login">Contraseña:</label>
 	<div class="form__group-input">
 		<input
 			type="password"
 			class="form__input"
 			name="password"
-			id="password"
+			id="password-login"
 			required
 		/>
 		<IconForm type="no-view" />
@@ -28,26 +28,3 @@ import "src/styles/forms.css";
 </div>
 
 <BtnColor text="INGRESAR" />
-
-<script>
-	if (window.location.pathname == "/"){
-		document.addEventListener("astro:page-load", () => {
-		const $form = document.querySelector(".form-login"),
-			$user = document.getElementById("user"),
-			$password = document.getElementById("password");
-
-		$form.addEventListener("submit", (e) => {
-			e.preventDefault();
-
-			const objectData = {
-				username: $user.value,
-				password: $password.value,
-			};
-			console.log(objectData);
-		});
-	});
-	}
-	else{
-
-	}
-</script>
