--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -15,7 +15,7 @@ import Layout from "@layouts/Layout.astro";
             text="¿Ya tiene una cuenta?"
             textN="Iniciar sesión"
         />
-    </mai>
+    </main>
 </Layout>
 <style>
     h1 {
@@ -25,8 +25,10 @@ import Layout from "@layouts/Layout.astro";
         position: relative;
         display: flex;
         align-items: center;
+        justify-content: flex-start;
         flex-direction: column;
+        height: auto;
         min-height: 100vh;
-        width: 100%;
+		margin: 0;
     }
 </style>
