--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -40,14 +40,11 @@
     }
 
     .text__link {
+        text-decoration: none;
         font-size: 0.8rem;
+        margin: .5rem auto;
+        color: inherit;
     }
-}
-.text__link {
-    text-decoration: none;
-    margin: 1.5rem auto;
-    font-size: 1rem;
-    color: #fff;
 }
 .form__group-wrong {
     .form__label {
